--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <div class="container">
+        <div class="container" id="nav">
             <nav>
                 <div class="onclick" onclick="myFunction(this)">
                     <div class="bar1"></div>
@@ -20,9 +20,9 @@
                 </div>
                 <div class="holder">
                     <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Work</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#nav">About</a></li>
+                        <li><a href="#creative">Work</a></li>
+                        <li><a href="#media">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -34,8 +34,9 @@
 
             </div>
         </div>
-        <div class="wrapper">
-            <h1>These are some of my projects</h1>
+        <div class="wrapper" id="creative">
+            <div ><h1 class="underline">  These are some of my projects</h1></div>
+           
 
             <div class="section">
                 <div class="flex1">
@@ -77,18 +78,18 @@
             </div>
             <button>Show all &nbsp <i class="fas fa-greater-than"></i></button>
         </div>
-        <div class="wrapper-2">
+        <div class="wrapper-2" id="media">
             <article>
-                <h1>Let's work together ...</h1>
+                <h1>Let's work together...</h1>
                 <p>How do you take your coffee?</p>
             </articl>
             <div class="font">
                 <ul>
-                    <li> <h3> <a href="#"><i class="fab fa-facebook-square"></i>Facebook</h3></li></a>
-                    <li> <h3> <a href="#"><i class="fab fa-github"></i>GitHub</h3></li></i></a>
-                    <li><h3> <a href="#"><i class="fab fa-twitter"></i>Twitter</h3></li></a>
-                    <li><h3> <a href="#"><i class="fas fa-at"></i>Send a email</h3></li></a>
-                    <li> <h3> <a href="#"><i class="fas fa-mobile-alt"></i>Call me</h3></li></a>
+                    <li> <h3> <a href="https://web.facebook.com/?_rdc=1&_rdr"><i class="fab fa-facebook-square"></i>Facebook</h3></li></a>
+                    <li> <h3> <a href="https://github.com/"><i class="fab fa-github"></i>GitHub</h3></li></i></a>
+                    <li><h3> <a href="https://twitter.com/home"><i class="fab fa-twitter"></i>Twitter</h3></li></a>
+                    <li><h3> <a href="https://mail.google.com/mail/u/0/#inbox/FMfcgxwHMPqwSsCXHbLrBTGHfcBpvGrM"><i class="fas fa-at"></i>Send a email</h3></li></a>
+                    <li> <h3> <a href="https://web.whatsapp.com/"><i class="fas fa-mobile-alt"></i>Call me</h3></li></a>
                     <li></li>
                 </ul>
             </div>
@@ -96,7 +97,7 @@
             <footer>
                 <ul>
                     <li>**This is my Portfolio and contact details are real</li>
-                    <li><a href="#"><i class="fas fa-at"> Replicate <a href="https://www.freecodecamp.org/learn">FreeCodeCamp.org</a></i></li>
+                    <li>Replicate <i class="fas fa-at"></i> <a href="https://www.freecodecamp.org/learn">FreeCodeCamp.org</a></li>
                 </ul>
             </footer>
         </div>
